--- a/scene-detail.html
+++ b/scene-detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Les rives du Territoire</title>
+    <title>Scène Principale - Les rives du Territoire</title>
     <link rel="stylesheet" href="src/css/style.css">
     <script type="module" src="src/js/script.js"></script>
     <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
@@ -59,119 +59,118 @@
                     <a href="artistes.html" class="menu__link">Artistes</a>
                 </li>
                 <li class="menu__item">
-                    <a href="scenes.html" class="menu__link">Scènes</a>
+                    <a href="scenes.html" class="menu__link menu__link--active">Scènes</a>
                 </li>
                 <li class="menu__item">
                     <a href="infos-pratiques.html" class="menu__link">Info pratique</a>
                 </li>
                 <li class="menu__item">
-                    <a href="contact.html" class="menu__link menu__link--active">Contact</a>
+                    <a href="contact.html" class="menu__link">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Page Header -->
-    <section class="page-header">
-        <div class="page-header__container">
-            <h1 class="page-header__title">Contactez-nous</h1>
-            <p class="page-header__subtitle">Nous sommes à votre écoute</p>
+    <!-- Stage Detail Hero -->
+    <section class="stage-detail-hero">
+        <div class="stage-detail-hero__image">
+            <img src="/placeholder.svg?height=600&width=1400" 
+                 alt="Scène Principale" class="stage-detail-hero__img">
+        </div>
+        <div class="stage-detail-hero__content">
+            <h1 class="stage-detail-hero__name">Scène Principale</h1>
+            <p class="stage-detail-hero__description">
+                La plus grande scène du festival accueille les têtes d'affiche et les performances les plus attendues.
+            </p>
         </div>
     </section>
 
-    <!-- Contact Form & Info -->
-    <section class="contact-section">
-        <div class="contact-section__container">
+    <!-- Stage Artists Schedule -->
+    <section class="stage-detail-section">
+        <div class="stage-detail-section__container">
+            <h2 class="stage-detail-section__title">Programmation de la scène</h2>
             
-            <div class="contact-content">
-                <!-- Contact Form -->
-                <div class="contact-form-wrapper">
-                    <h2 class="contact-form__title">Envoyez-nous un message</h2>
-                    <form class="contact-form" id="contactForm">
-                        <div class="form-group">
-                            <label for="name" class="form-group__label">Nom complet</label>
-                            <input type="text" id="name" name="name" class="form-group__input" required>
+            <div class="stage-schedule">
+                <article class="stage-schedule-day">
+                    <h3 class="stage-schedule-day__title">Jeudi 20 Décembre</h3>
+                    <div class="stage-schedule-day__items">
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">18:00</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">DJ Sunrise</h4>
+                                <span class="stage-schedule-item__genre">Electro</span>
+                            </div>
                         </div>
-
-                        <div class="form-group">
-                            <label for="email" class="form-group__label">Email</label>
-                            <input type="email" id="email" name="email" class="form-group__input" required>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="subject" class="form-group__label">Sujet</label>
-                            <select id="subject" name="subject" class="form-group__select" required>
-                                <option value="">Choisir un sujet</option>
-                                <option value="billetterie">Billetterie</option>
-                                <option value="programmation">Programmation</option>
-                                <option value="acces">Accès et transport</option>
-                                <option value="hebergement">Hébergement</option>
-                                <option value="partenariat">Partenariat</option>
-                                <option value="presse">Presse</option>
-                                <option value="autre">Autre</option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="message" class="form-group__label">Message</label>
-                            <textarea id="message" name="message" rows="6" class="form-group__textarea" required></textarea>
-                        </div>
-
-                        <button type="submit" class="button button--primary">Envoyer le message</button>
-                    </form>
-                </div>
-
-                <!-- Contact Info -->
-                <div class="contact-info">
-                    <h2 class="contact-info__title">Nos coordonnées</h2>
-                    
-                    <div class="contact-info-item">
-                        <h3 class="contact-info-item__title">Adresse</h3>
-                        <p class="contact-info-item__text">
-                            Les Rives du Territoire<br>
-                            Berges de la Savoureuse<br>
-                            90000 Belfort, France
-                        </p>
-                    </div>
-
-                    <div class="contact-info-item">
-                        <h3 class="contact-info-item__title">Email</h3>
-                        <p class="contact-info-item__text">
-                            <a href="mailto:contact@rivesterritoire.fr" class="contact-info-item__link">
-                                contact@rivesterritoire.fr
-                            </a>
-                        </p>
-                    </div>
-
-                    <div class="contact-info-item">
-                        <h3 class="contact-info-item__title">Téléphone</h3>
-                        <p class="contact-info-item__text">
-                            <a href="tel:+33384220000" class="contact-info-item__link">
-                                +33 (0)3 84 22 00 00
-                            </a>
-                        </p>
-                    </div>
-
-                    <div class="contact-info-item">
-                        <h3 class="contact-info-item__title">Suivez-nous</h3>
-                        <div class="contact-socials">
-                            <a href="https://www.facebook.com/?locale=fr_FR" class="contact-socials__link" aria-label="Facebook">
-                                <img src="assets/icons/facebook.svg" alt="" aria-hidden="true" class="contact-socials__icon">
-                            </a>
-                            <a href="https://www.instagram.com/" class="contact-socials__link" aria-label="Instagram">
-                                <img src="assets/icons/instagram.svg" alt="" aria-hidden="true" class="contact-socials__icon">
-                            </a>
-                            <a href="https://x.com/?lang=fr" class="contact-socials__link" aria-label="Twitter">
-                                <img src="assets/icons/x.svg" alt="" aria-hidden="true" class="contact-socials__icon">
-                            </a>
-                            <a href="https://www.youtube.com/" class="contact-socials__link" aria-label="YouTube">
-                                <img src="assets/icons/youtube.svg" alt="" aria-hidden="true" class="contact-socials__icon">
-                            </a>
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">20:00</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">Les Échos Urbains</h4>
+                                <span class="stage-schedule-item__genre">Hip-Hop</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </article>
+
+                <article class="stage-schedule-day">
+                    <h3 class="stage-schedule-day__title">Vendredi 21 Décembre</h3>
+                    <div class="stage-schedule-day__items">
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">21:00</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">Rock Legend</h4>
+                                <span class="stage-schedule-item__genre">Rock</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="stage-schedule-day">
+                    <h3 class="stage-schedule-day__title">Samedi 22 Décembre</h3>
+                    <div class="stage-schedule-day__items">
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">15:00</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">Urban Poets</h4>
+                                <span class="stage-schedule-item__genre">Hip-Hop</span>
+                            </div>
+                        </div>
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">20:00</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">Main Headliner</h4>
+                                <span class="stage-schedule-item__genre">Pop</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="stage-schedule-day">
+                    <h3 class="stage-schedule-day__title">Dimanche 23 Décembre</h3>
+                    <div class="stage-schedule-day__items">
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">16:30</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">Farewell Band</h4>
+                                <span class="stage-schedule-item__genre">Indie</span>
+                            </div>
+                        </div>
+                        <div class="stage-schedule-item">
+                            <span class="stage-schedule-item__time">19:00</span>
+                            <div class="stage-schedule-item__content">
+                                <h4 class="stage-schedule-item__artist">Grand Finale</h4>
+                                <span class="stage-schedule-item__genre">Multi-genre</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </div>
+        </div>
+    </section>
 
+    <!-- Back to Stages -->
+    <section class="back-link-section">
+        <div class="back-link-section__container">
+            <a href="scenes.html" class="button button--secondary">Retour à la liste des scènes</a>
         </div>
     </section>
 
